# emirp

./: .gitignore  CMakeLists.txt  emirp.c  emirp.h  emirp_runner.c  emirp_test.c
project/nbproject/: configurations.xml  project.xml
